--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,35 @@
 <resources>
     <string name="app_name">Practicum-Android-Diploma</string>
+    <string name="title_main">Поиск вакансий</string>
+    <string name="title_settings_filter">Настройки фильтрации</string>
+    <string name="title_choosing_a_work">Выбор места работы</string>
+    <string name="title_choosing_a_country">Выбор страны</string>
+    <string name="title_choosing_a_region">Выбор региона</string>
+    <string name="title_vacancy">Вакансия</string>
+    <string name="title_favorite">Избранное</string>
+    <string name="title_team">Команда</string>
+    <string name="hint_enter_your_request">Введите запрос</string>
+    <string name="hint_place_of_work">Место работы</string>
+    <string name="hint_industry">Отрасль</string>
+    <string name="hint_entre_industry">Введите отрасль</string>
+    <string name="hint_title_expected_salary">Ожидаемая зарплата</string>
+    <string name="hint_enter_amount">Введите сумму</string>
+    <string name="hint_country">Страна</string>
+    <string name="hint_region">Регион</string>
+    <string name="hint_enter_region">Введите регион</string>
+    <string name="placeholder_no_internet">Нет интернета</string>
+    <string name="placeholder_unable_to_retrieve_job_listing">Не удалось получить список вакансий</string>
+    <string name="placeholder_there_is_no_such_region">Такого региона нет</string>
+    <string name="placeholder_failed_to_get_list">Не удалось получить список</string>
+    <string name="placeholder_vacancy_not_found_or_deleted">Вакансия не найдена или удалена</string>
+    <string name="placeholder_server_error">Ошибка сервера</string>
+    <string name="placeholder_the_list_is_empty">Список пуст</string>
+    <string name="text_hide_jobs_without_salary">Не показывать без зарплаты</string>
+    <string name="button_choose">Выбрать</string>
+    <string name="button_reset">Сбросить</string>
+    <string name="button_apply">Применить</string>
+    <string name="button_nav_main">Главная</string>
+    <string name="button_nav_favorite">Избранное</string>
+    <string name="button_nav_team">Команда</string>
+
 </resources>
