Создал граф навигации и заглушки для всех экранов приложения

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,6 +5,7 @@
     <string name="title_choosing_a_work">Выбор места работы</string>
     <string name="title_choosing_a_country">Выбор страны</string>
     <string name="title_choosing_a_region">Выбор региона</string>
+    <string name="title_choosing_a_industry">Выбор отрасли</string>
     <string name="title_vacancy">Вакансия</string>
     <string name="title_favorite">Избранное</string>
     <string name="title_team">Команда</string>
