--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -19,7 +19,7 @@
     <string name="hint_region">Регион</string>
     <string name="hint_enter_region">Введите регион</string>
     <string name="placeholder_no_internet">Нет интернета</string>
-    <string name="placeholder_unable_to_retrieve_job_listing">Не удалось получить список вакансий</string>
+    <string name="placeholder_unable_to_retrieve_job_listing">Не удалось получить\n&#160;&#160;&#160;&#160;&#160;список вакансий</string>
     <string name="placeholder_there_is_no_such_region">Такого региона нет</string>
     <string name="placeholder_failed_to_get_list">Не удалось получить список</string>
     <string name="placeholder_vacancy_not_found_or_deleted">Вакансия не найдена или удалена</string>
@@ -46,15 +46,23 @@
     <string name="text_team_bukus">Букус Даниил</string>
     <string name="text_team_petrusсhak">Петрущак Назар</string>
     <string name="text_salary_not_specified">Зарплата не указана</string>
-    <string name="text_salary_from">от %1$d %2$s</string>
-    <style name="text_salary_to_string_placeholder"/>
-    <string name="text_salary_to">до %1$d %2$s</string>
-    <string name="text_salary_from_to">от %1$d до %2$d %3$s</string>
+    <string name="text_salary_from">от %1$s %2$s</string>
+    <string name="text_salary_to">до %1$s %2$s</string>
+    <string name="text_salary_from_to">от %1$s до %2$s %3$s</string>
+    <string name="text_no_such_vacancy">Таких вакансий нет</string>
     <string name="currency_rub">₽</string>
-    <string name="currcurrency_usd">$</string>
+    <string name="currency_rur">₽</string>
+    <string name="currency_usd">$</string>
     <string name="currency_eur">€</string>
     <string name="currency_hkd">HK$</string>
     <string name="currency_aud">A$</string>
     <string name="currency_gbp">£</string>
     <string name="currency_sgd">S$</string>
+    <string name="currency_byr">Br</string>
+    <string name="currency_kzt">₸</string>
+    <string name="currency_uah">₴</string>
+    <string name="currency_azn">₼</string>
+    <string name="currency_uzs">сум</string>
+    <string name="currency_gel">₾</string>
+    <string name="currency_kgt">с</string>
 </resources>
