--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -65,4 +65,9 @@
     <string name="currency_uzs">сум</string>
     <string name="currency_gel">₾</string>
     <string name="currency_kgt">с</string>
+    <string name="error_no_internet">Нет подключения к интернету</string>
+    <string name="error_server">Ошибка сервера</string>
+    <string name="error_data_format">Неверный формат данных</string>
+    <string name="error_vacancy_not_found">Вакансия не найдена</string>
+    <string name="error_response_empty">Пустой ответ</string>
 </resources>
