--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -50,6 +50,7 @@
     <string name="text_salary_to">до %1$s %2$s</string>
     <string name="text_salary_from_to">от %1$s до %2$s %3$s</string>
     <string name="text_no_such_vacancy">Таких вакансий нет</string>
+    <string name="text_job_location_format">%1$s, %2$s</string>
     <string name="currency_rub">₽</string>
     <string name="currency_rur">₽</string>
     <string name="currency_usd">$</string>
