--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -94,4 +94,5 @@
     <string name="send_email">Отправить email</string>
     <string name="title_contacts">Контакты</string>
     <string name="no_data_available">Информация не указана</string>
+    <string name="no_vacancy_available">Вакансия не найдена или\n&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;удалена</string>
 </resources>
